# runtimedb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config-docker.toml  config-local.toml  docker-compose.otel.yml
.github/workflows/: build-pr.yml  ci.yml
docs/plans/: 2025-12-15-secret-manager-design.md  2026-01-14-connection-id-refactor.md  2026-01-14-refresh-endpoint-design.md  2026-01-14-refresh-endpoint-impl.md  2026-01-20-connection-secret-refactor.md  2026-01-20-type-coverage-testing-design.md  2026-01-21-restore-credential-abstraction.md  2026-01-23-dataset-upload-design.md  2026-01-23-dataset-upload-impl.md  2026-01-23-opentelemetry-design.md  2026-01-23-opentelemetry-impl.md  2026-01-28-eliminate-internal-ids.md  2026-01-28-redis-metadata-cache-design.md  2026-01-28-redis-metadata-cache-impl.md  2026-01-29-enhanced-query-tracing-design.md  2026-01-30-async-result-persistence-design.md  2026-01-30-async-result-persistence-plan.md
migrations/postgres/: v1.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql
migrations/sqlite/: v1.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql
src/: classify.rs  engine.rs  id.rs  lib.rs  source.rs  telemetry.rs
src/catalog/: backend.rs  caching_manager.rs  duckdb_manager.rs  manager.rs  migrations.rs  mock_catalog.rs  mod.rs  postgres_manager.rs  sqlite_manager.rs  store.rs
src/config/: mod.rs
src/datafetch/: batch_writer.rs  collecting_writer.rs  error.rs  fetcher.rs  index_presets.rs  mod.rs  orchestrator.rs  sorted_parquet.rs  types.rs
src/datafetch/adbc/: driver.rs  fetcher.rs  mod.rs
src/datafetch/drivers/: README.md
src/datafetch/native/: arrow_convert.rs  bigquery.rs  duckdb.rs  ducklake.rs  iceberg.rs  mod.rs  mysql.rs  parquet_writer.rs  postgres.rs  snowflake.rs
src/datafusion/: async_connection_catalog.rs  async_connection_schema.rs  bounded_cache.rs  catalog_provider.rs  connections_catalog_list.rs  datasets_catalog.rs  datasets_provider.rs  engine.rs  lazy_table_provider.rs  mod.rs  parquet_exec.rs  parquet_scan.rs  results_schema.rs  runtimedb_catalog.rs  schema_provider.rs  table_cache.rs
src/datafusion/information_schema/: columns.rs  mod.rs  tables.rs
src/datasets/: error.rs  mod.rs  schema.rs  validation.rs
src/http/: app_server.rs  error.rs  handlers.rs  metrics_middleware.rs  mod.rs  models.rs
src/http/controllers/: connections_controller.rs  datasets_controller.rs  health_controller.rs  information_schema_controller.rs  mod.rs  queries_controller.rs  query_controller.rs  query_runs_controller.rs  refresh_controller.rs  results_controller.rs  saved_queries_controller.rs  secrets_controller.rs  uploads_controller.rs
src/metrics/: mod.rs  worker.rs
src/secrets/: backend.rs  encrypted.rs  encrypted_catalog_backend.rs  encryption.rs  mod.rs  validation.rs
src/storage/: filesystem.rs  mod.rs  s3.rs
tests/: caching_catalog_tests.rs  catalog_manager_suite.rs  catalog_tests.rs  catalog_uploads_datasets_tests.rs  datafetch_tests.rs  dataset_e2e_tests.rs  dataset_query_tests.rs  engine_sync_tests.rs  gis_integration_tests.rs  golden_path_tests.rs  http_server_tests.rs  iceberg_tests.rs  information_schema_tests.rs  integration_test.rs  integration_tests.rs  object_store_auth_header_tests.rs  postgres_catalog_tests.rs  refresh_tests.rs  result_persistence_tests.rs  s3_storage_tests.rs  saved_query_tests.rs  storage_tests.rs  storage_uploads_datasets_tests.rs  tpch_benchmark_tests.rs  trace_header_tests.rs
tests/type_coverage/: bigquery_types.rs  capturing_writer.rs  duckdb_types.rs  fixtures.rs  harness.rs  main.rs  mysql_types.rs  postgres_types.rs
tests/type_coverage/fixtures/: binary.toml  booleans.toml  decimals.toml  floats.toml  integers.toml  json.toml  strings.toml  timestamps.toml
