[package]
name = "rivetdb"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
datafusion = "50.2"
duckdb = { version = "1.4", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "chrono", "tls-rustls"] }
rustyline = "17.0"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1"
tempfile = "3"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
arrow-csv = "56.2"
arrow-json = "56.2"
arrow-schema = { version = "56.2", features = ["serde"] }
object_store = { version = "0.12", features = ["aws"] }
url = "2.5"
axum = "0.8.7"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
config = "0.15.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.17"
uuid = { version = "1.11", features = ["v4"] }
urlencoding = "2.1"
aes-gcm-siv = "0.11"
base64 = "0.22"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
proptest = "1.6"
rand = "0.8"
