[package]
name = "runtimedb"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
datafusion = "51.0"
datafusion-tracing = "51.0.0"
instrumented-object-store = "52.0.0"
duckdb = { version = "1.4.4", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "mysql", "chrono", "tls-rustls", "bigdecimal"] }
bigdecimal = "0.4"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1"
tempfile = "3"
futures = "0.3"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
arrow-json = "57"
arrow-schema = { version = "57", features = ["serde"] }
object_store = { version = "0.12", features = ["aws"] }
url = "2.5"
axum = "0.8.7"
tower = { version = "0.5.2", features = ["util"] }
config = "0.15.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"
tower-http = { version = "0.6.8", features = ["trace"] }
thiserror = "2.0.17"
http = "1.3"
uuid = { version = "1.11", features = ["v4"] }
nanoid = "0.4"
urlencoding = "2.1"
aes-gcm-siv = "0.11"
base64 = "0.22"
iceberg = "0.7"
iceberg-catalog-rest = "0.7"
iceberg-catalog-glue = "0.7"
snowflake-api = "0.11"
gcp-bigquery-client = "0.28.0"
# Arrow 55 for iceberg compatibility (iceberg uses arrow 55, datafusion uses arrow 57)
arrow-array-55 = { package = "arrow-array", version = "55" }
arrow-ipc-55 = { package = "arrow-ipc", version = "55" }
# Arrow 54 for snowflake-api compatibility (snowflake-api uses arrow 54)
arrow-array-54 = { package = "arrow-array", version = "54" }
arrow-ipc-54 = { package = "arrow-ipc", version = "54" }
# Arrow 56 for duckdb compatibility (duckdb uses arrow 56, datafusion uses arrow 57)
arrow-ipc-56 = { package = "arrow-ipc", version = "56" }
liquid-cache-client = { git = "https://github.com/XiangpengHao/liquid-cache", rev = "5e63d811132230a0e15fb6d4311be2eb5551cb4d" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"

[build-dependencies]
sha2 = "0.10"

[dev-dependencies]
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["postgres", "minio", "mysql"] }
rand = "0.8"
reqwest = { version = "0.13.1", features = ["json"] }
toml = "0.8"
rust_decimal = "1.36"
opentelemetry_sdk = { version = "0.31", features = ["testing"] }
